# toread-python

./: .gitignore  README.md  main.py  pyproject.toml  settings_sample.json
tests/: test_book.py  test_toread.py
toread/: api.py  book.py  db.py
utils/: _print.py  api.py  book.py  custom_exceptions.py  db.py
