[tool.poetry]
name = "ToRead"
version = "0.1.0"
description = ""
authors = ["Sulav <sulavmaharjan63@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pymongo = "^3.11.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.5b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
